# UCAS-2025-Computer_Graphics

./: .gitignore  Readme.md
Project1/: Readme.md  makefile
Project1/basic_graphics/: main  main.cpp
Project1/color_filling/: main  main.cpp
Project1/interactive_window/: main  main.cpp
Project1/teapot/: main  main.cpp
Project2/: CMakeLists.txt  README.md  build_and_run.sh  run.sh
Project2/meshark/: CMakeLists.txt
Project2/meshark/include/meshark/: mesh-elements.h  mesh-io.h
Project2/meshark/src/: geometry-mesh.cc  mesh-simplifier.cc  test.cpp
Project2/output/: readme.md
Project3/: README.md  makefile
Project3/include/: element.h  kd_tree.h  trace.h
Project3/src/: main.cpp  trace.cpp
start/: makefile  start  start.cpp
